--- a/assets/css/Cabeçalho/cabecalho.css
+++ b/assets/css/Cabeçalho/cabecalho.css
@@ -2,7 +2,20 @@
     align-items: center;
     background: #f9f9f9;
     display: flex;
-    justify-content: space-between;
+    
+}
+
+@media screen and (min-width:0) {
+    .cabecalho {
+        padding: 0 1rem;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho {
     padding-left: 2rem;
     padding-right: 2rem;
+    justify-content: space-between;
+    }
 }
